# build

.github/workflows/: immortalwrt.yml  quickjs.yml  v8.yml
immortalwrt/: COPYING
quickjs/: CMakeLists.txt
v8/: args.gn
v8/args.gn/: windows
v8/patches/: 01-fix-icu-build-on-mscv.patch
